--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.8.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.7.3",
     "nodemailer-express-handlebars": "^5.0.0",
     "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react-icons": "^4.3.1"
   },
